# quant_core

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  GEMINI.md  PROJECT_PLAN.md  README.md  create_pairs_data.py  pyproject.toml  readme.md  requirements.txt  verify_extensions.py  verify_private_import.py
backtest_runners/: run_backtest.py
backtesting/: run_backtest.py
dashboard/: app.py  dashboard_utils.py  test_dashboard_utils.py  test_ui_logic_standalone.py  utils.py
data/: PEP_KO_daily_2010_2023_formatted.csv  download_yfinance_data.py
data/benchmark/: AAPL_2024-10-01_2025-11-25.csv  AMD_2024-10-01_2025-11-25.csv  AMZN_2024-10-01_2025-11-25.csv  INTC_2024-10-01_2025-11-25.csv  KO_2024-10-01_2025-11-25.csv  MSFT_2024-10-01_2025-11-25.csv  NVDA_2024-10-01_2025-11-25.csv  PEP_2024-10-01_2025-11-25.csv  SPY_2024-10-01_2025-11-25.csv  TSLA_2024-10-01_2025-11-25.csv
docs/: 00_Project_Overview.md  01_Core_Infrastructure.md  02_Strategy_Development.md  03_Backtesting_and_Reporting.md  PROJECT_PLAN.md  backtesting_and_reporting.md  cli_usage.md  code_quality.md  data_management.md  datasets.md  documentation_hub.md  interpreting_report.md  safety_and_recovery.md  strategy_development.md
docs/formulations/: bollinger_bands_formulation.md
docs/strategies/: rsi_2_period_formulation.md  simple_ma_crossover_formulation.md
reports/: backtest_SimpleMACrossover_20251122_193933.html  backtest_SimpleMACrossover_20251122_194133.html  backtest_bollinger-bands_20251122_205856.html  backtest_bollinger-bands_20251124_214812.html  backtest_bollinger-bands_20251124_220416.html  backtest_bollinger-bands_20251124_230624.html  backtest_bollinger-bands_20251124_231323.html  backtest_rsi-2-period_20251122_205743.html  backtest_rsi-2-period_20251122_205839.html  backtest_rsi-2-period_20251124_214758.html  backtest_rsi-2-period_20251124_220402.html  backtest_rsi-2-period_20251124_230621.html  backtest_rsi-2-period_20251124_231320.html  backtest_simple-ma-crossover_20251122_205728.html  backtest_simple-ma-crossover_20251124_214745.html  backtest_simple-ma-crossover_20251124_220348.html  backtest_simple-ma-crossover_20251124_230618.html  backtest_simple-ma-crossover_20251124_231317.html  benchmark_report_20251124_221309.md  benchmark_report_multi_asset_20251126_150127.md  benchmark_report_public_20251124_221816.md  benchmark_report_public_20251124_225222.md  benchmark_report_public_20251124_231457.md  benchmark_report_public_20251124_231643.md  report_SimpleMACrossover_20251122_193933.md  report_SimpleMACrossover_20251122_194133.md  report_bollinger-bands_20251122_205856.md  report_bollinger-bands_20251124_214812.md  report_bollinger-bands_20251124_220416.md  report_bollinger-bands_20251124_230624.md  report_bollinger-bands_20251124_231323.md  report_rsi-2-period_20251122_205743.md  report_rsi-2-period_20251122_205839.md  report_rsi-2-period_20251124_214758.md  report_rsi-2-period_20251124_220402.md  report_rsi-2-period_20251124_230621.md  report_rsi-2-period_20251124_231320.md  report_simple-ma-crossover_20251122_205728.md  report_simple-ma-crossover_20251124_214745.md  report_simple-ma-crossover_20251124_220348.md  (+2 more)
research/: debug_regime_counts.py  train_regime_model.ipynb  train_regime_model.py  training_report_regime_classifier.md  utils.py
run_backtesting/: benchmark.py  run_backtest.py
src/: backtesting_extensions.py  cli.py  commission_models.py  data_downloader.py  data_loader.py  execution.py  feature_engineering.py  interfaces.py  notifications.py
strategies/: base_strategy.py  bollinger_bands.py  buy_and_hold.py  rsi_2_period.py  simple_demo.py  simple_ma_crossover.py
testing/: test_execution_safety.py  test_infrastructure.py
testing/debug_scripts/: debug_commission.py  (+6 more)
tools/: monitor.py  supervisor.py
(+52 files in other folders)
