[project]
name = "quant-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "backtesting>=0.6.5",
    "hmmlearn>=0.3.3",
    "ib-insync>=0.9.86",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "ta-lib>=0.6.8",
    "tabulate>=0.9.0",
    "xgboost>=3.1.2",
    "yfinance>=0.2.66",
]
