[project]
name = "quant-core"
version = "0.1.0"
description = "Algorithmic Trading Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "backtesting>=0.6.5",
    "hmmlearn>=0.3.3",
    "ib-insync>=0.9.86",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "ta-lib>=0.6.8",
    "tabulate>=0.9.0",
    "xgboost>=3.1.2",
    "yfinance>=0.2.66",
]

[project.scripts]
qc = "src.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "ruff>=0.14.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "run_backtesting*", "strategies_private*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

