[project]
name = "quant-core"
version = "0.1.0"
description = "Algorithmic Trading Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "backtesting>=0.6.5",
    "hmmlearn>=0.3.3",
    "ib-insync>=0.9.86",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "streamlit>=1.40.0",
    "ta-lib>=0.6.8",
    "tabulate>=0.9.0",
    "xgboost>=3.1.2",
    "yfinance>=0.2.66",
]

[project.scripts]
qc = "src.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "hypothesis>=6.152.4",
    "networkx>=3.4.2",
    "pre-commit>=4.5.0",
    "ruff>=0.14.8",
    "ty>=0.0.32",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "run_backtesting*", "strategies_private*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = []

# E402 (module-level import not at top of file) is intentional in scripts that
# bootstrap sys.path before importing first-party packages. Suppress per-file
# rather than globally so the rule still catches accidental misordered imports
# in library code.
[tool.ruff.lint.per-file-ignores]
"dashboard/app.py" = ["E402"]
"dashboard/dashboard_utils.py" = ["E402"]
"dashboard/test_dashboard_utils.py" = ["E402"]
"run_backtesting/benchmark.py" = ["E402"]
"run_backtesting/run_backtest.py" = ["E402"]
"src/market_adapters/ibkr/connection.py" = ["E402"]
"strategies_private/ensemble_signal_strategy.py" = ["E402"]
"strategies_private/portfolio_allocation_strategy.py" = ["E402"]
"strategies_private/research/generate_trade_dataset.py" = ["E402"]
"testing/debug_scripts/test_data_loading.py" = ["E402"]
"testing/debug_scripts/test_ui_logic.py" = ["E402"]
"testing/test_execution_safety.py" = ["E402"]
"tools/supervisor.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

